--- a/about/index.html
+++ b/about/index.html
@@ -149,7 +149,7 @@ window.onload = wrap_img;
     </div>
 
     <div class="social-links">
-<ul class="social-media-list"><li><a rel="me" href="https://github.com/marcelcastrobr" title="marcelcastrobr"><svg class="svg-icon grey"><use xlink:href="/notebooks/assets/minima-social-icons.svg#github"></use></svg></a></li></ul>
+<ul class="social-media-list"><li><a rel="me" href="https://github.com/marcelcastrobr" target="_blank" title="marcelcastrobr"><svg class="svg-icon grey"><use xlink:href="/notebooks/assets/minima-social-icons.svg#github"></use></svg></a></li></ul>
 </div>
 
   </div>
